[package]
name = "drive-optimization-wizard"
version = "0.1.0"
edition = "2021"
description = "A tool to optimize and clean your drive space."
license = "MIT"
repository = "https://github.com/username/drive-optimization-wizard"
homepage = "https://github.com/username/drive-optimization-wizard"
documentation = "https://docs.rs/drive-optimization-wizard"
readme = "README.md"
keywords = ["cleaner", "optimization", "disk", "cli"]
categories = [
    "command-line-utilities",
    "filesystem",
    "memory-management",
    "caching",
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.9"
tokio = { version = "1.0", features = ["full"] }
inquire = "0.7.5"

[[bin]]
name = "dow"
path = "src/main.rs"